# MaxwellLink

./: .gitignore  AGENTS.md  HPC_PROFILE.json  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish.yml
docs/source/: agent_skills.rst  architecture.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  overview.rst  theory.rst  usage.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: page.html
docs/source/drivers/: ase.rst  dftbplus.rst  index.rst  lammps.rst  qutip.rst  rtehrenfest.rst  rttddft.rst  sho.rst  tls.rst
docs/source/em_solvers/: index.rst  laser_driven.rst  meep.rst  multimode_cavity.rst  single_mode_cavity.rst
docs/source/tutorials/: ase_ehrenfest.rst  index.rst  multi_molecule.rst  rttddft.rst  socket_workflow.rst
examples/: hello_world.ipynb  meep_socketmolecule_lammps.py  meep_socketmolecule_notcp.py  meep_socketmolecule_notcp_Nsites.py  meep_socketmolecule_singlefile.py  meep_socketmolecule_tlsrelaxation.py  meep_tlsmolecule_relaxation.py  meep_tlsmolecule_relaxation_Nsites.py  run_meep_socketmolecule_lammps.sh  run_meep_socketmolecule_notcp_Nsites.sh  run_meep_socketmolecule_rtttdft.sh  run_meep_socketmolecule_tls.sh  test_meep_socketmolecule_rttddft.py
examples/demo_psi4_rttddft/tddft_spectrum_sample/: calculate_lr_rt_tddft.py  psi4_lrtddft_output_id_0.txt  rt_tddft_energy_dipoles_0.txt
examples/rt_spectrum_sample/: plot_rt_spectra_pade.py
examples/tddft_spectrum_sample/: README.md  calculate_lr_rt_tddft.py  columnplots.py  plot_rt_spectra_pade.py  psi4_lrtddft_output_id_0.txt  rt_tddft_energy_dipoles_0.txt
projects/: README.md
skills/: .compile_profile.json  README.md
skills/mxl-cli/: SKILL.md
skills/mxl-core/: SKILL.md
skills/mxl-core/references/: driver_quickref.md  solver_quickref.md
skills/mxl-core/scripts/: validate_skills_structure.py
skills/mxl-driver-ase/: SKILL.md
skills/mxl-driver-lammps/: SKILL.md
skills/mxl-driver-psi4-rtehrenfest/: SKILL.md
skills/mxl-driver-psi4-rttddft/: SKILL.md
skills/mxl-driver-qutip/: SKILL.md
skills/mxl-driver-tls/: SKILL.md
skills/mxl-hpc-slurm/: SKILL.md
skills/mxl-hpc-slurm/references/: slurm_recipes.md
skills/mxl-hpc-slurm/resources/: hpc_setting.md
skills/mxl-index/: SKILL.md
skills/mxl-laser-driven/: SKILL.md
skills/mxl-laser-driven/references/: laser_run_recipes.md
skills/mxl-meep/: SKILL.md
skills/mxl-meep/references/: meep_run_recipes.md
skills/mxl-nl2sim-eval/: SKILL.md
skills/mxl-postprocess/: SKILL.md
skills/mxl-postprocess/references/: postprocessing.md
skills/mxl-project-scaffold/: SKILL.md
skills/mxl-project-scaffold/scripts/: mxl_scaffold_project.py  mxl_validate_project.py
skills/mxl-singlemode/: SKILL.md
skills/mxl-singlemode/references/: singlemode_run_recipes.md
skills/mxl-troubleshoot/: SKILL.md
skills/paper_tutorial_plasmon_heating/: SKILL.md
skills/paper_tutorial_plasmon_heating/assets/: README.md
skills/paper_tutorial_plasmon_heating/playbooks/: fig_001_plasmon_flux_spectrum.md  fig_002_tls_heating_map.md  fig_003_bomd_heating_map.md
skills/paper_tutorial_plasmon_heating/references/: doc_map.md  source_map.md
skills/paper_tutorial_vsc_water/: SKILL.md
skills/paper_tutorial_vsc_water/assets/: README.md
skills/paper_tutorial_vsc_water/playbooks/: fig_001_singlemode_vsc.md  fig_002_meep_bragg_vsc.md  fig_003_scaling.md
skills/paper_tutorial_vsc_water/references/: doc_map.md  source_map.md
src/maxwelllink/: __init__.py  molecule.py  molecule.py.legacy  molecule_abstract.py  molecule_fast.py  sockets.py  units.py
src/maxwelllink/cli/: __init__.py  mxl.py  mxl_clean.py  mxl_hpc.py  mxl_init.py
src/maxwelllink/em_solvers/: dummy_em.py  laser_driven.py  meep.py  multimode_cavity.py  multimode_cavity_old.py  multiple_mode_cavity.py  single_mode_cavity.py  single_mode_cavity_old.py
src/maxwelllink/molecule/: __init__.py  molecule.py  molecule_legacy.py
src/maxwelllink/mxl_drivers/: README.md
src/maxwelllink/mxl_drivers/lammps/: fix_maxwelllink.cpp  fix_maxwelllink.h  install.py  mxl_install_lammps.sh
src/maxwelllink/sockets/: __init__.py  sockets.py
src/maxwelllink/tools/: __init__.py  ir.py  pulses.py  tddft_spectrum.py  transverse_components.py
tests/: conftest.py  test_meep_socket_tls1_relaxation.py  test_meep_socket_tls2_relaxation.py  test_meep_tlsmolecule_1_relaxation.py  test_meep_tlsmolecule_n_relaxation.py
tests/test_agents/: test_prompts.py
tests/test_ase/: test_ase_psi4_bomd.py
tests/test_cli/: test_mxl_init.py
tests/test_psi4_rttddft/: test_meep_2d_socket_rttddft.py  test_meep_2d_socket_rttddft_mu_z_au_ref.txt
tests/test_qutip/: build_tls.py  test_meep_2d_socket_qutip_tls_relaxation.py
tests/test_sho/: test_singlemode_sho_energy_conservation.py
tests/test_singlemode/: test_singlemode_socket_vs_nonsocket.py
tests/test_tls/: test_meep_1d_socket_tls1_relaxation.py  test_meep_2d_socket_tls1_relaxation.py  test_meep_2d_socket_tls2_relaxation.py  test_meep_2d_tlsmolecule_1_relaxation.py  test_meep_2d_tlsmolecule_n_relaxation.py  test_meep_3d_socket_tls1_relaxation.py
tutorials/: 00_intro_rt_tdhf.ipynb  01_driven_tls.ipynb  04_singlemode_esc.ipynb  05_singlemode_many_drivers.ipynb  07_meep_tls_spontaneous_emission.ipynb  10_dftbplus.ipynb  README.md  advanced_features_polarization_type.ipynb  ase_vs_ehrenfest.ipynb  dftbplus.ipynb  driven_tls.ipynb  h2_rt_tdhf_psi4numpy_tutorial.ipynb  meep_tls_spontaneous_emission.ipynb  meep_vsc.ipynb  multi_molecule_superradiance.ipynb  rttddft_hcn.ipynb  single_mode_tls.ipynb  singlemode_esc.ipynb  singlemode_many_drivers.ipynb  singlemode_sho.ipynb  singlemode_tls.ipynb  singlemode_vsc.ipynb  socket_tls_workflow.ipynb  vsc_cavmd.ipynb
tutorials/dftbplus_input/: h2_electronic_socket.hsd  h2o32_meep_socket.hsd  h2o_vibrational_socket.hsd
tutorials/lmp_input/: data.lmp  in.lmp  in_mxl.lmp  launch_lmp_xml.sh  meep_cavmd.py  mxl_input.py
tutorials/qutip_input/: hcn_qutip.py  hcn_tddft_excitation_energies.txt  hcn_tddft_transition_dipoles.txt
(+80 files in other folders)
