[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxwelllink"
version = "0.3.0"
description = "MaxwellLink: A unified framework for self-consistent light-matter simulations"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{ name = "Tao E. Li", email = "taoeli@udel.edu" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "cmake>=3.18",
  "requests>=2.31"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = [
  "electromagnetics",
  "molecular-dynamics",
  "quantum-simulation",
  "socket-interface",
  "light-matter",
  "polariton"
]

[project.urls]
"Homepage" = "https://github.com/TaoELi/MaxwellLink"
"Documentation" = "https://taoeli.github.io/MaxwellLink"
"Source" = "https://github.com/TaoELi/MaxwellLink"
"Issues" = "https://github.com/TaoELi/MaxwellLink/issues"

# `mxl_driver.py` and other scripts available on PATH
[project.scripts]
"mxl_driver.py" = "maxwelllink.mxl_drivers.python.mxl_driver:mxl_driver_main"
# a simplified version of mxl_driver.py 
"mxl_driver" = "maxwelllink.mxl_drivers.python.mxl_driver:mxl_driver_main"
# a simple installation script for modified LAMMPS with MaxwellLink support
"mxl_install_lammps" = "maxwelllink.mxl_drivers.lammps.install:mxl_lammps_main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["maxwelllink*", "mxl_drivers*"]

[tool.setuptools.package-data]
"maxwelllink.mxl_drivers.lammps" = ["fix_maxwelllink.*", "README.md"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24.3",
  "flake8>=7.0",
  "pre-commit>=3.6",
]
docs = [
  "sphinx>=7.2",
  "furo>=2024.1.29",                
  "sphinx-autodoc-typehints>=2.1",  
  "sphinxcontrib-napoleon>=0.7",    
  "myst-parser>=3.0",               
  "sphinx-copybutton>=0.5",         
  "sphinx-design>=0.6",             
  "nbsphinx>=0.9",
  "sphinxcontrib-youtube",
  "nbconvert", 
  "ipykernel",
  "pandoc"                  
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
    | .*\.egg-info
  )/
)
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",  
  "W503",  
]
per-file-ignores = [
  "__init__.py:F401,F403,F405",
  "src/**/__init__.py:F401,F403,F405",
]

[tool.pytest.ini_options]
markers = [
  "core: marks tests as core (deselect with '-m \"not core\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "optional: marks tests as optional (deselect with '-m \"not optional\"')",
]
filterwarnings = [
  "ignore:.*SwigPy(Packed|Object).*no __module__ attribute:DeprecationWarning",
  "ignore:.*swigvarlink.*no __module__ attribute:DeprecationWarning",
]
